--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hi.
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset='utf-8'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<title>Alessandro Melandri</title>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
+
+	<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+	
+</head>
+<body class="fira-code">
+
+	<div class="container">
+		<header>Alessandro Melandri</header>
+		<section>
+			<p>Ciao.</p>
+		</section>
+	</div>
+
+
+</body>
+</html>
