Small home layout change

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <body class="fira-code">
 
 	<div class="container">
+		<img src="img/banner.png" alt="headerBanner" class="headerBanner" />
 		<header>Alessandro Melandri</header>
 		<section>
-			<p>Ciao.</p>
+			<p class="intro">IT Project Manager, strimpello la chitarra, fotografo particolari insignificanti, studio la Lingua dei Segni Italiana.</p>
 		</section>
 	</div>
 
