Rivisto layout mobile e desktop

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset='utf-8'>
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -11,18 +12,18 @@
 	<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap" rel="stylesheet">
 
 	<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-	
 </head>
+
 <body class="fira-code">
-	
+
 	<div class="container">
-		
 		<header>Alessandro Melandri</header>
 		<section>
-			<p class="intro">IT Project Manager, strimpello la chitarra, fotografo particolari insignificanti, studio la Lingua dei Segni Italiana.</p>
+			<p class="intro">IT Project Manager, <br />strimpello la chitarra, <br />fotografo particolari insignificanti, <br />studio la Lingua dei Segni Italiana.</p>
+			<p><a href="https://mastodon.uno/@alemelandri">Mastodon</a>, <a href="https://bsky.app/profile/alessandro.melandri.net">Bluesky</a></p>
 		</section>
 	</div>
 
-
 </body>
+
 </html>
