Corretto link mastodon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header>Alessandro Melandri</header>
 		<section>
 			<p class="intro">IT Project Manager, <br />strimpello la chitarra, <br />fotografo particolari insignificanti, <br />studio la Lingua dei Segni Italiana.</p>
-			<p><a href="https://mastodon.uno/@alemelandri">Mastodon</a>, <a href="https://bsky.app/profile/alessandro.melandri.net">Bluesky</a></p>
+			<p><a href="https://mastodon.uno/@alemelandri" rel="me">Mastodon</a>, <a href="https://bsky.app/profile/alessandro.melandri.net">Bluesky</a></p>
 		</section>
 	</div>
 
